<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="8dp"
            android:id="@+id/textViewReleaseDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

        <TextView
            android:id="@+id/textViewOriginalTitle"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/textViewLableTitle"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />



        <TextView
            android:id="@+id/textViewLableOriginalTitle"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_original_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <TextView
            android:id="@+id/textViewLabelRating"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rating"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

        <TextView
            android:id="@+id/textViewRating"
            android:layout_margin="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
            app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

        <TextView
            android:id="@+id/textViewLabelRealiseDate"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_realise_date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

        <TextView
            android:id="@+id/textViewLabelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:text="@string/text_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate" />

        <TextView
            android:id="@+id/textViewOverView"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="32dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTrailers"
            android:nestedScrollingEnabled="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewOverView"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewReviews"
            android:nestedScrollingEnabled="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>